removed settings, fixed z-index for cardform button

--- a/client/styles/CardForm.css
+++ b/client/styles/CardForm.css
@@ -72,7 +72,7 @@
     font-size: 1.25rem;
     cursor: pointer;
     position: relative;
-    z-index: 9;
+    z-index: 4;
   }
   
   #form button:before {
